--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -377,7 +377,7 @@
         </div>
         <div class='teaser'>
             <div class='content'>
-                <div class="text-offset description-without-background-item-4">
+                <div data-type="email" class="text-offset description-without-background-item-4">
                     <div class="description-page-content-item-4">
                         <p
                                 class="text-offset description-text-item-4 text-1"
