--- a/template/checklist/index.html
+++ b/template/checklist/index.html
@@ -561,8 +561,10 @@
             </div>
         </div>
         <slot name="welcome-header"></slot>
-        <div class="checklist">
-            <slot name="block_0"></slot>
+        <div class="checklist_wrapper">
+            <div class="checklist">
+                <slot name="block_0"></slot>
+            </div>
         </div>
     </div>
 
